static/mod_game/game.css
.window {
    justify-content: space-around;
    text-align: justify;
}

.window-row {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.head {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
    width: 100%
}

.budget {
    font-family: monospace;
    font-size: 1.2em;
}

.players {
    /*display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;*/
    padding-top: 10px;
    min-width: 90px;
}

.blue {
    color: blue;
}

.darkred {
    color: #7B001C;
}

.darkgreen {
    color: #002800;
}

.players .table-icon {
    margin-bottom: 9px;
}

.player {
    border: solid 1px;
    border-radius: 4px;
    padding: 6px;
    margin-bottom: 4px;
}

.player.is_selected {
    background-color: #86dcFF;
    border-color: blue;
}

.player.is_offline {
    border-color: red;
    background-color: #ffAAAA;
}

.player.has_left {
    background-color: #bbb;
}

.player.can_attack {
    cursor: url("/static/cursors/sword.cur"), default;
    -webkit-animation: colorchange 2s linear infinite;
    -o-animation: colorchange 2s linear infinite;
    animation: colorchange 2s linear infinite;
}

.head .status {
    width: 200px;
}

.hand {
    display: flex;
    width: 100%;
    flex-flow: row wrap;
    justify-content: space-around;
}

.card {
    flex-direction: row;
    justify-content: space-around;
    padding: 5px;
    text-align: center;
    border-radius: 20px;
    font-size: 1em;
    border: 4px solid transparent;
    hyphens: auto;
    position: relative;
    margin-bottom: 4px;
    overflow: hidden;
}

.hand .card {
    width: 150px;
    font-size: 0.7em;
    min-height: 200px;
}

.card_defence {
    background-color: lightgreen;
    border-color: green;
}

.card_offence {
    background-color: #face8d;
    border-color: red;
}

.card_money {
    background-color: #FFFFAA;
    border-color: darkorange;
}

.card_inactive {
    opacity: 50%;
}

.card_active {
    cursor: pointer;
}

.card_accident {
    background-color: lightblue;
    border-color: blue;
}

.card_gray {
    border-color: #808080;
}

.card_selected {
    border-width: 10px;
}

.center {

}

.window-cell {
    padding: 10px;
    padding-bottom: 0;
}

.table {
    width: 70%;

}

.against {
    display: flex;
    flex-direction: column;
}

.table {
    display: flex;
}

.attack {
    justify-content: space-between;
}

.table-icon {
    font-size: 3em;
    text-align: center;
    margin-bottom: 7px;
    bottom: 0%;
    width: 100%;
}

.smaller {
    font-size: 2.2em !important;
}

.defence {
    justify-content: space-between;
    flex: 1;
}

.separator {
    border-left: 1px solid black;
    width: 2px;
    margin: 10px;
    height: 100%;
}

.defence_cards {
    display: flex;
    flex-flow: column wrap;
    justify-content: space-between;
    align-items: center;
    height: 220px;
}

.small_card {
    width: 150px;
    height: 200px;
    padding: 4px;
    text-align: center;
    border-radius: 20px;
    font-size: 0.8em;
    hyphens: auto;
}

.def_table_card {
    width: 150px;
    height: 70px;
    text-align: center;
    border-radius: 20px;
    font-size: 0.8em;
    hyphens: auto;
    margin-left: 10px;
    margin-right: 10px;
}

.small_card_defence {
    background-color: lightgreen;
    border: 4px solid green;
}

.small_card_offence {
    background-color: #face8d;
    border: 4px solid red;
}

.small_card_accident {
    background-color: lightblue;
    border: 4px solid blue;
}

.card_falsics {
    float: right;
    clear: both;
    right: 5px;
    position: relative;
    padding: 5px;
    margin-top: -4px;
    margin-right: -4px;
    background-color: white;
    font-weight: bold;
    border-radius: 30px;
    bottom: 0px;
    position: absolute;
    font-size: 1.2em;
}


.log {
    width: 250px;
    height: 300px;
    text-align: center;
    border-radius: 5px;
    border: 2px solid black;
    flex-flow: row wrap;
    background-color: rgba(255, 255, 255, 0.5);
}

.log_header {
    height: 20px;
    text-align: left;
    background-color: #cccccc;
}

.log_body {
    display: flex;
    flex-direction: column;
    height: 100%;
    overflow-y: auto;
    text-align: flex-start;
}

.versus {
    font-weight: bold;
    margin-bottom: 7px;
}

.log_record {
    text-align: left;
}

.green_text {
    color: darkgreen;
}

.red_text {
    color: darkred;
}

.blue_text {
    color: darkblue;
}

@keyframes colorchange {
    0% {
        background: white;
    }
    50% {
        background: lightblue;
    }
    100% {
        background: white;
    }
}

@-webkit-keyframes colorchange {
    0% {
        background: white;
    }
    50% {
        background: lightblue;
    }
    100% {
        background: white;
    }
}

.card_more_wrapper {
    position: absolute;

    width: 100%;
    height: 100%;
    transition: .2s ease;
    opacity: 0;
}

.card_more {
    cursor: pointer;
    position: absolute;
    left: 0;
    background: rgba(0, 0, 0, 0.5); /* Black see-through */
    color: #f1f1f1;
    transition: .5s ease;
    width: 102%;
    top: 70%;
    font-size: 20px;
    text-align: center;
    margin: -5px;
    vertical-align: middle;
    height: 30%;
    display: flex;
    justify-content: center;
    align-items: center;
}
.card_play {
    top: 0;
    height: 70%;
}
.card_more:hover {
    background: rgba(0, 255, 255, 0.5);
    color: black;

}

.card_more_wrapper:hover {
    opacity: 1;
    backdrop-filter: blur(2px);
}


.overlay {
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    opacity: 0.5;
    background-color: white;
    z-index: 999 !important;
}

.cardbig-content {
    position: absolute;
    left: 50%;
    top: 10%;
    transform: translateX(-50%);
    z-index: 1000 !important;
    border-radius: 15px;
    min-width: 300px;
    min-height: 500px;
    border-width: 4px;
    border-style: solid;
    text-align: justify;
    padding: 10px;
    /*box-shadow: 6px 6px #ccc;*/
}
.card_name {
    text-align: center;
    width: 100%;
    font-weight: bold;
}

.card_in_text {
    text-decoration-color: #a2dffb;
    text-decoration: underline;
    cursor: pointer;
}
.card_in_text:hover {
    background: linear-gradient(90deg, #e0bb96, #b38797);
}

div img {
   width: 40px;
   height: 40px;
   display: block;
   //width: 100%;
   display: block;
    margin-left: auto;
    margin-right: auto
}

